fix spacing below comment box which contains an error

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_comments.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_comments.scss
@@ -15,6 +15,7 @@
 
       .misc {
         display: block;
+        margin-top: 10px;
       }
     }
 
@@ -24,7 +25,6 @@
       height: 42px;
       transition: height .15s;
       margin-top: 10px;
-      margin-bottom: 10px;
       padding: 10px;
       border: 1px solid $grey-2;
     }
